# dune-istl

./: .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  dune.module
cmake/modules/: AddARPACKPPFlags.cmake  AddSuperLUFlags.cmake  FindARPACKPP.cmake  FindSuperLU.cmake
dune/istl/: bcrsmatrix.hh  bvector.hh  cholmod.hh  ldl.hh  matrixindexset.hh  overlappingschwarz.hh  owneroverlapcopy.hh  solver.hh  solverfactory.hh  solvers.hh  spqr.hh  superlu.hh  supermatrix.hh  umfpack.hh
dune/istl/eigenvalue/test/: CMakeLists.txt  cond2test.cc  matrixinfo.hh
dune/istl/paamg/: amg.hh  fastamg.hh
dune/istl/paamg/test/: CMakeLists.txt
dune/istl/test/: CMakeLists.txt  bcrsmatrixtest.cc  bvectordotperformancetest.cc  bvectortwonormperformancetest.cc  cholmodtest.cc  ldltest.cc  matrixtest.cc  matrixtest.hh  solveraborttest.cc  solverfactorytest.ini  spqrtest.cc  superlutest.cc  umfpacktest.cc
dune/python/istl/: solvers.hh
python/: CMakeLists.txt  setup.py.in
python/dune/istl/: CMakeLists.txt
src/: CMakeLists.txt  istl-solver-playground.cc  istl-solver-playground.hh  playground.ini
